# SoundLearner

./: .clang-format  .clangd  .gitignore  AGENTS.md  Makefile  README.md  meson.build
SoundLearner2/: .gitignore  LICENSE  do_analyse.sh  meson.build
SoundLearner2/dataset_builder/: dataset_builder.cpp  dataset_builder.h  meson.build
SoundLearner2/include/: fft.h  filewriter.h  meson.build  midi.h  structures.h
SoundLearner2/instrument/: instrument_model.cpp  instrument_model.h  string_oscillator.cpp
SoundLearner2/player/: main.cpp  meson.build
dataset_builder/: dataset_builder.cpp  dataset_builder.h  meson.build
deep_trainer/: README.md  __init__.py  adaptive_curriculum.py  analysis_frontend.py  analyze_parameter_space.py  audio_features.py  audio_preview.py  cnn_model_trainer.py  dataset.py  dataset_augmentor.py  differentiable_audio.py  evaluate.py  losses.py  model.py  model_predictor.py  predict.py  prepare_dataset.py  requirements.txt  slft.py  train.py
deep_trainer/configs/: adaptive_curriculum_v1.toml  adaptive_curriculum_v2_2048.toml  complexity_curriculum_v1_c1.toml  complexity_curriculum_v1_c2.toml  complexity_curriculum_v1_c3.toml  complexity_curriculum_v1_c4.toml  complexity_curriculum_v1_c5.toml  complexity_curriculum_v1_c6.toml  complexity_curriculum_v1_c7.toml  curriculum_v1_clean.toml  curriculum_v1_heavy.toml  curriculum_v1_light.toml  curriculum_v1_medium.toml  school_v1_clean.toml  school_v1_heavy.toml  school_v1_light.toml  school_v1_medium.toml
docs/: README.md  adaptive-curriculum.md  analysis-frontend.md  dataset-discovery.md  project-guide.md  trainer.md
feature_extractor/: main.cpp  meson.build
genetic_trainer/: main.cpp  meson.build  trainer.cpp  trainer.h
include/: audio_features.cpp  audio_features.h  common.h  fft.h  filereader.cpp  filereader.h  filewriter.cpp  filewriter.h  meson.build  midi.h  structures.h
instrument/: instrument_model.cpp  instrument_model.h  meson.build  string_oscillator.cpp  string_oscillator.h
libs/: Makefile
libs/common/: Makefile  common.h  instrument_model.cpp  instrument_model.h  sound_string.cpp  sound_string.h
libs/include/: common.h
libs/instrument/: Makefile  instrument_model.cpp  instrument_model.h  string_oscillator.cpp  string_oscillator.h
libs/midi/: Makefile  midi.cpp  midi.h
libs/wave/: Makefile  wave.cpp  wave.h
meson/: clang.ini
player/: Makefile  README.md  main.cpp  meson.build  piano2_small_batch_1000_out.data
scripts/: build_complexity_curriculum_v1.bat  build_curriculum_v1.bat  build_dataset_sharded.py  build_datasets.py  build_school_v1.bat  check_dataset_ready.py  run_adaptive_curriculum_v1.bat  run_adaptive_curriculum_v2_2048.bat  train_complexity_curriculum_v1.bat  train_curriculum_v1.bat  train_school_v1.bat
shared/: common.h
src/: Makefile
src/dataset_builder/: Makefile  image_processor.py  main.cpp  spectrogram.sh  test.txt
src/deep_trainer/: 1d_model_predictor.py  cnn_1d_model_trainer.py  cnn_model_trainer.py  model_predictor.py
src/fft/: Makefile  fft.cpp  fft.h  img.cpp  img.h
src/genetic_trainer/: Makefile  main.cpp  trainer.cpp  trainer.h
src/genetic_trainer/training_data/piano/: piano1.mid
src/instrument/: Makefile  instrument_model.cpp  instrument_model.h  string_oscillator.cpp  string_oscillator.h
src/logger/: Makefile  logger.cpp  logger.h
src/midi/: Makefile  midi.cpp  midi.h
src/player/: Makefile  StringSoundsPlayer  StringSoundsPlayer.debug  epiano1_decode_small_1000_E3_out.data  main.cpp
src/trainer/: Makefile  StringSoundsTrainer  StringSoundsTrainer.debug  main.cpp  progress_logger.cpp  progress_logger.h  trainer.cpp  trainer.h
src/trainer/training_data/basics/: middle_c.mid
src/wave/: Makefile  wave.cpp  wave.h
trainer/: Makefile  README.md  main.cpp  trainer.cpp  trainer.h
trainer/training_data/piano1/: piano1.mid
